# RUDN_scraper

./: README.md  pyproject.toml
src/scraper/: scraper.py
